Add GIT_FASTSTART for last step, too.
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -127,6 +127,7 @@ report-completion:
   stage: benchmark-completion
   tags: [yuria]
   script:
+    - *GIT_FASTSTART
     - cd faststart
     - rebench --experiment="CI ID $CI_PIPELINE_ID" --report-completion rebench.conf
 
