Delete faststart/.git to avoid confusing ReBench
We want to capture the TruffleRuby git details

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -13,9 +13,11 @@ stages:
      git -C ../graal fetch --all || true
      git -C ../mx pull || true
      git clone --depth=1 https://github.com/smarr/truffleruby-faststart.git faststart || true
+     rm -Rf faststart/.git || true
   
    ensure-faststart: &GIT_FASTSTART |
      git clone --depth=1 https://github.com/smarr/truffleruby-faststart.git faststart || true
+     rm -Rf faststart/.git || true
 
    package-truffleruby: &PACKAGE_TR |
      export RESULT_HOME=$(dirname $(jt --use ${VARIANT} graalvm-home))
