Disable notifications on GitHub
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/rebench.conf
+++ b/rebench.conf
@@ -8,7 +8,7 @@ reporting:
     rebenchdb:
         # this url needs to point to the API endpoint
         db_url: https://rebench.stefan-marr.de/rebenchdb
-        repo_url: https://github.com/smarr/truffleruby
+        repo_url: https://github.com/smarr/truffleruby-disabled  # the suffix -disabled is used to prevent notifications
         record_all: true # make sure everything is recorded
         project_name: TruffleRuby
 
