--- a/rebench.conf
+++ b/rebench.conf
@@ -1,6 +1,6 @@
 # -*- mode: yaml -*-
 # Config file for ReBench
-default_experiment: all
+default_experiment: benchmark
 default_data_file: 'benchmark.data'
 
 reporting:
@@ -114,6 +114,8 @@ executors:
     TruffleRuby-native:
       path: /tmp/truffleruby/truffleruby-native-libgraal/bin
       executable: truffleruby
+      profiler:
+        perf: {}
 
     TruffleRuby-native-interp:
       path: /tmp/truffleruby/truffleruby-native-libgraal/bin
@@ -122,21 +124,46 @@ executors:
 
     
 experiments:
-    ruby-interp:
-        description: Run Non-JITing Versions
-        suites:
-           - ruby-startup
-           - ruby-startup-larger
+    benchmark:
+        description: All Benchmarks
         executions:
-           - TruffleRuby-ce
-           - TruffleRuby-ce-interp
-           - TruffleRuby-jvm
-           # - TruffleRuby-native
-           - TruffleRuby-native-interp
-    ruby-jit:
-        description: Run JITing Versions
-        suites:
-           - ruby-steady
+          - TruffleRuby-ce:
+              suites:
+                - ruby-startup
+                - ruby-startup-larger
+          - TruffleRuby-ce-interp:
+              suites:
+                - ruby-startup
+                - ruby-startup-larger
+          - TruffleRuby-jvm:
+              suites:
+                - ruby-startup
+                - ruby-startup-larger
+          # - TruffleRuby-native
+          - TruffleRuby-native-interp:
+              suites:
+                - ruby-startup
+                - ruby-startup-larger
+          - TruffleRuby-ce:
+              suites:
+                - ruby-steady
+
+    profile:
+        description: Profile Native Image Interpreters
+        action: profile
         executions:
-           - TruffleRuby-ce
-           # - TruffleRuby-native
+            - TruffleRuby-native-interp:
+                iterations: 10!
+                invocations: 1!
+                suites:
+                  - ruby-startup
+
+    profile-large:
+        description: Profile Native Image Interpreters
+        action: profile
+        executions:
+            - TruffleRuby-native-interp:
+                iterations: 1!
+                invocations: 1!
+                suites:
+                  - ruby-startup-larger
