--- a/native-libgraal.env
+++ b/native-libgraal.env
@@ -1,3 +1,4 @@
 DYNAMIC_IMPORTS=/substratevm
 COMPONENTS=TruffleRuby,SubstrateVM,LibGraal
 NATIVE_IMAGES=true
+EXTRA_IMAGE_BUILDER_ARGUMENTS=truffleruby:-H:-DeleteLocalSymbols
