Added missing profiler details to native image interpreter
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/rebench.conf
+++ b/rebench.conf
@@ -121,8 +121,9 @@ executors:
       path: /tmp/truffleruby/truffleruby-native-libgraal/bin
       executable: truffleruby
       args: --experimental-options --engine.Compilation=false 
+      profiler:
+        perf: {}
 
-    
 experiments:
     benchmark:
         description: All Benchmarks
