Added micro benchmarks
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/rebench.conf
+++ b/rebench.conf
@@ -92,6 +92,20 @@ benchmark_suites:
           - Activesupport:   {extra_args: 30, machines: [yuria3]}
           # - AsciidoctorConvert:     extra_args: 1
           # - AsciidoctorLoadFile:     extra_args: 1
+
+    ruby-micros:
+        gauge_adapter: RebenchLog
+        location: micros
+        command: "harness.rb %(benchmark)s%(input)s %(iterations)s 20 "
+        iterations: 20
+        invocations: 1
+        benchmarks:
+            - Baseline:     {input_sizes: [""]}
+            - Dispatch:     {input_sizes: [0, 1, 2, 4, 6, 8, 10]}
+            - DispatchPoly: {input_sizes: [1, 2, 4, 5, 7, 9, 11]}
+            - Local:        {input_sizes: [   2, 4, 5, 7, 9, 11]}
+            - ArrayAccess:  {input_sizes: [1, 2, 4, 5, 7, 9, 11]}
+
           
 
 # VMs have a name and are specified by a path and the binary to be executed
@@ -149,6 +163,13 @@ experiments:
               suites:
                 - ruby-steady
 
+    benchmark-micros:
+         description: Only micro benchmarks
+         executions:
+           - TruffleRuby-native-interp:
+              suites:
+                - ruby-micros
+
     profile:
         description: Profile Native Image Interpreters
         action: profile
@@ -168,3 +189,11 @@ experiments:
                 invocations: 1!
                 suites:
                   - ruby-startup-larger
+
+    profile-micros:
+         description: Only profile micros
+         action: profile
+         executions:
+           - TruffleRuby-native-interp:
+              suites:
+                - ruby-micros
