--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -164,39 +164,39 @@ report-completion:
 
 # A full CI Run, which should be scheduled, weekly or so
 full-test-run-on-jvm-ce:on-schedule:
-  stage: build
-  tags: [yuria]
+  stage: test
+  tags: [yuria3]
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
   script:
     - *GIT_DEPS
     - *PREP_PATH
 
-    - bin/jt build --sforceimports --env jvm-ce
+    - jt build --sforceimports --env jvm-ce
     
     # Run time: 2.3min
-    - bin/jt --use jvm-ce test fast
+    - jt --use jvm-ce test fast
 
     # Run time: 2sec
-    - bin/jt --use jvm-ce test :next
+    - jt --use jvm-ce test :next
     
     # Run time: 21min
-    - bin/jt --use jvm-ce test :truffle
+    - jt --use jvm-ce test :truffle
     
     # Run time: 6.6min
-    - bin/jt --use jvm-ce test :language
+    - jt --use jvm-ce test :language
     
     # Run time: 21min
-    - bin/jt --use jvm-ce test :core
+    - jt --use jvm-ce test :core
     
     # Run time: 2.5min
-    - bin/jt --use jvm-ce test :library
+    - jt --use jvm-ce test :library
 
     # Run time: 2.2min
-    - bin/jt --use jvm-ce test :cext
+    - jt --use jvm-ce test :cext
 
     # Run time: 1min
-    - bin/jt --use jvm-ce test :security
+    - jt --use jvm-ce test :security
 
     # Run time: 12min
-    - bin/jt --use jvm-ce test :command_line
+    - jt --use jvm-ce test :command_line
