Adapt to new names
See https://github.com/oracle/truffleruby/commit/8e3f0757620442a067e0a695c103ad92b1f01c00

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/native-libgraal.env
+++ b/native-libgraal.env
@@ -1,4 +1,4 @@
 DYNAMIC_IMPORTS=/substratevm
 COMPONENTS=TruffleRuby,SubstrateVM,LibGraal
 NATIVE_IMAGES=true
-EXTRA_IMAGE_BUILDER_ARGUMENTS=truffleruby:-H:-DeleteLocalSymbols
+EXTRA_IMAGE_BUILDER_ARGUMENTS=librubyvm.so:-H:-DeleteLocalSymbols rubyvm:-H:-DeleteLocalSymbols
