Added liquid benchmark that parses all the different template files
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/rebench.conf
+++ b/rebench.conf
@@ -42,6 +42,9 @@ benchmark_suites:
             - LiquidCartParse:          {extra_args:  100, warmup: 40, machines: [yuria3]}
             - LiquidCartRender:         {extra_args:  300, warmup: 50, machines: [yuria ]}
             - LiquidMiddleware:         {extra_args:  200, warmup: 60, machines: [yuria2]}
+            
+            - LiquidParseAll:           {extra_args:    1, warmup: 40, machines: [yuria ]}
+            
             - OptCarrot:                {extra_args:    5, warmup: 25, machines: [yuria3]}
             # - AsciidoctorConvert:     {extra_args:    1, warmup: 50, machines: [yuria ]}
             - AsciidoctorConvertSmall:  {extra_args:    1, warmup: 50, machines: [yuria ]}
@@ -76,6 +79,9 @@ benchmark_suites:
             - LiquidCartParse:          {extra_args:  1, machines: [yuria ]}
             - LiquidCartRender:         {extra_args:  5, machines: [yuria ]}
             - LiquidMiddleware:         {extra_args: 20, machines: [yuria3]}
+            
+            - LiquidParseAll:           {extra_args:  1, machines: [yuria ]}
+            
             - OptCarrot:                {extra_args:  1, machines: [yuria ]}
             - AsciidoctorConvertTiny:   {extra_args:  1, machines: [yuria3]}
             - AsciidoctorLoadFileTiny:  {extra_args:  1, machines: [yuria3]}
