Added LiquidRenderBibs benchmark
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/rebench.conf
+++ b/rebench.conf
@@ -44,6 +44,7 @@ benchmark_suites:
             - LiquidMiddleware:         {extra_args:  200, warmup: 60, machines: [yuria2]}
             
             - LiquidParseAll:           {extra_args:    1, warmup: 40, machines: [yuria ]}
+            - LiquidRenderBibs:         {extra_args:    1, warmup: 40, machines: [yuria2]}
             
             - OptCarrot:                {extra_args:    5, warmup: 25, machines: [yuria3]}
             # - AsciidoctorConvert:     {extra_args:    1, warmup: 50, machines: [yuria ]}
@@ -81,6 +82,7 @@ benchmark_suites:
             - LiquidMiddleware:         {extra_args: 20, machines: [yuria3]}
             
             - LiquidParseAll:           {extra_args:  1, machines: [yuria ]}
+            - LiquidRenderBibs:         {extra_args:  1, machines: [yuria2]}
             
             - OptCarrot:                {extra_args:  1, machines: [yuria ]}
             - AsciidoctorConvertTiny:   {extra_args:  1, machines: [yuria3]}
