Make sure the incoming folder is recreated, if absent
The cron job cleaning up things may actually delete the folder… oops.

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -28,6 +28,7 @@ stages:
 
    upload-truffleruby: &UPLOAD_TR |
      sftp tmp-artifacts << EOF
+       -mkdir incoming
        -mkdir incoming/${CI_PIPELINE_ID}/
        put ${PROJECT_FOLDER}/truffleruby-${VARIANT}.tar.lz4 incoming/${CI_PIPELINE_ID}/
      EOF
