--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -52,8 +52,6 @@ stages:
 build1-native-and-jvm-ce:
   stage: build
   tags: [yuria]
-  except:
-    - tags # don't built for tags, just branches
   script:
     - *GIT_DEPS
     - *PREP_PATH
@@ -66,12 +64,12 @@ build1-native-and-jvm-ce:
 
     - *PACKAGE_TR
     - *UPLOAD_TR
+  rules:
+    - if: $CI_COMMIT_TAG =~ "/^$/" # don't built for tags, just branches
 
 build2-jvm:
   stage: build
   tags: [yuria2]
-  except:
-    - tags # don't built for tags, just branches
   script:
     # try to abort the job if we only try to benchmark native interpreter
     - "[ -f ./.gitlab.native-int-only ] && exit 0"
@@ -89,13 +87,13 @@ build2-jvm:
 
     - *PACKAGE_TR
     - *UPLOAD_TR
+  rules:
+    - if: $CI_COMMIT_TAG =~ "/^$/" # don't built for tags, just branches
 
 # Run Benchmarks
 benchmark1:
   stage: benchmark
   tags: [yuria]
-  except:
-    - tags # don't built for tags, just branches
   script:
     - *DOWNLOAD_TR
     - *GIT_FASTSTART
@@ -114,6 +112,7 @@ benchmark1:
       fi
     - rm -Rf /tmp/truffleruby
   rules:
+      - if: $CI_COMMIT_TAG =~ "/^$/" # don't built for tags, just branches
       - changes:
           - mx.truffleruby/suite.py
           - src/**/*
@@ -123,8 +122,6 @@ benchmark1:
 benchmark2:
   stage: benchmark
   tags: [yuria2]
-  except:
-    - tags # don't built for tags, just branches
   script:
     - *DOWNLOAD_TR
     - *GIT_FASTSTART
@@ -144,6 +141,7 @@ benchmark2:
       fi
     - rm -Rf /tmp/truffleruby
   rules:
+      - if: $CI_COMMIT_TAG =~ "/^$/" # don't built for tags, just branches
       - changes:
           - mx.truffleruby/suite.py
           - src/**/*
@@ -153,8 +151,6 @@ benchmark2:
 benchmark3:
   stage: benchmark
   tags: [yuria3]
-  except:
-    - tags # don't built for tags, just branches
   script:
     - *DOWNLOAD_TR
     - *GIT_FASTSTART
@@ -174,6 +170,7 @@ benchmark3:
       fi
     - rm -Rf /tmp/truffleruby
   rules:
+      - if: $CI_COMMIT_TAG =~ "/^$/" # don't built for tags, just branches
       - changes:
           - mx.truffleruby/suite.py
           - src/**/*
@@ -183,13 +180,12 @@ benchmark3:
 report-completion:
   stage: benchmark-completion
   tags: [yuria]
-  except:
-    - tags # don't built for tags, just branches
   script:
     - *GIT_FASTSTART
     - cd faststart
     - rebench --experiment="CI ID $CI_PIPELINE_ID" --report-completion rebench.conf
   rules:
+      - if: $CI_COMMIT_TAG =~ "/^$/" # don't built for tags, just branches
       - changes:
           - mx.truffleruby/suite.py
           - src/**/*
