Disable the startup benchmarks on the JVM, with and without Graal
This is stuff I haven’t looked at, because it’s just much too noisy.
So, let’s see how we fare without it.

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/rebench.conf
+++ b/rebench.conf
@@ -150,18 +150,18 @@ experiments:
     benchmark:
         description: All Benchmarks
         executions:
-          - TruffleRuby-ce:
-              suites:
-                - ruby-startup
-                - ruby-startup-larger
-          - TruffleRuby-ce-interp:
-              suites:
-                - ruby-startup
-                - ruby-startup-larger
-          - TruffleRuby-jvm:
-              suites:
-                - ruby-startup
-                - ruby-startup-larger
+          # - TruffleRuby-ce:
+          #     suites:
+          #       - ruby-startup
+          #       - ruby-startup-larger
+          # - TruffleRuby-ce-interp:
+          #     suites:
+          #       - ruby-startup
+          #       - ruby-startup-larger
+          # - TruffleRuby-jvm:
+          #     suites:
+          #       - ruby-startup
+          #       - ruby-startup-larger
           # - TruffleRuby-native
           - TruffleRuby-native-interp:
               suites:
