--- a/native-libgraal.env
+++ b/native-libgraal.env
@@ -1,5 +1,6 @@
 GRAALVM_SKIP_ARCHIVE=true
 DYNAMIC_IMPORTS=/substratevm
-COMPONENTS=TruffleRuby,SubstrateVM,LibGraal
+COMPONENTS=TruffleRuby,SubstrateVM,LibGraal,tlfm
 NATIVE_IMAGES=true
-EXTRA_IMAGE_BUILDER_ARGUMENTS=librubyvm.so:-H:-DeleteLocalSymbols rubyvm:-H:-DeleteLocalSymbols
+EXTRA_IMAGE_BUILDER_ARGUMENTS=librubyvm.so:-H:-DeleteLocalSymbols rubyvm:-H:-DeleteLocalSymbols -H:BuildOutputJSONFile=native-image-build-rubyvm.json
+INSTALLABLES=TruffleRuby
