--- a/native-libgraal.env
+++ b/native-libgraal.env
@@ -1,6 +1,6 @@
 GRAALVM_SKIP_ARCHIVE=true
 DYNAMIC_IMPORTS=/substratevm
 COMPONENTS=TruffleRuby,GraalVM compiler,SubstrateVM,Truffle Macro,LibGraal
-NATIVE_IMAGES=true
-EXTRA_IMAGE_BUILDER_ARGUMENTS=librubyvm.so:-H:-DeleteLocalSymbols rubyvm:-H:-DeleteLocalSymbols -H:BuildOutputJSONFile=native-image-build-rubyvm.json
+NATIVE_IMAGES=suite:sulong,lib:rubyvm
+EXTRA_IMAGE_BUILDER_ARGUMENTS=librubyvm.so:-H:-DeleteLocalSymbols rubyvm:-H:-DeleteLocalSymbols rubyvm:-H:+UnlockExperimentalVMOptions rubyvm:-H:BuildOutputJSONFile=native-image-build-rubyvm.json rubyvm:-H:-UnlockExperimentalVMOptions
 INSTALLABLES=TruffleRuby
